--- a/team.html
+++ b/team.html
@@ -106,7 +106,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card p-3 py-4 mt-5 mb-5">
-                    <div class="text-center"> <img src="" width="100" height="100"class="rounded-circle">
+                    <div class="text-center"> <img src="mernan.png" width="100" height="100"class="rounded-circle">
                         <h3 class="mt-2">مرنان ماجد</h3> <span class="mt-1 clearfix">Android Developer</span> 
                         <small class="mt-4 clearfix">16 سنة</small>
                         <small class="mt-4">عضو في برلمان طلائع الجمهورية ومقرر عام الجلسة علي المستوي المحافظة؛ لاعبة جودو</small>
@@ -121,7 +121,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card p-3 py-4 mt-5">
-                    <div class="text-center"> <img src="https://i.imgur.com/xELPaag.jpg"width="100" height="100" class="rounded-circle">
+                    <div class="text-center"> <img src="ali.png"width="100" height="100" class="rounded-circle">
                         <h3 class="mt-2">علي المتيم</h3> <span class="mt-1 clearfix">Graphics Designer</span>
                          <small class="mt-4 clearfix">15 سنة</small>
                          <small class="mt-4 clearfix">كرة القدم هوايتي ⚽</small>
@@ -136,7 +136,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card p-3 py-4 mt-5">
-                    <div class="text-center"> <img src="https://i.imgur.com/nAcoHRf.jpg" width="100" height="100" class="rounded-circle">
+                    <div class="text-center"> <img src="مصطفى.png" width="100" height="100" class="rounded-circle">
                         <h3 class="mt-2">مصطفى عصام</h3> <span class="mt-1 clearfix">Java Architect</span> 
                         <small class="mt-4 clearfix">16 سنة</small>
                         <small class="mt-4">طالب في الصف الثاني الثانوى في مدرسة اللواء الرسمية لغات,هويتي كورة القدم⚽، وأحب أن ممارسة السباحة🏊‍♂️</small>
@@ -160,7 +160,7 @@
             </div>
             <div class="col-md-5">
                 <div class="card p-3 py-4 mt-5">
-                    <div class="text-center"> <img src="https://i.imgur.com/xELPaag.jpg" width="100" height="100" class="rounded-circle">
+                    <div class="text-center"> <img src="mohamed.png" width="100" height="100" class="rounded-circle">
                         <h3 class="mt-2">محمد عبده</h3> <span class="mt-1 clearfix">Graphics Designer</span> 
                         <small class="mt-4 clearfix">15 سنة</small>
                         <small class="mt-4"> عضو يبرلمان الطلائع,ألعب البلاستيشن🕹️</small>
@@ -175,7 +175,7 @@
             </div>
             <div class="col-md-5">
                 <div class="card p-3 py-4 mt-5">
-                    <div class="text-center"> <img src="https://i.imgur.com/nAcoHRf.jpg" width="100" height="100" class="rounded-circle">
+                    <div class="text-center"> <img src="khaled.png" width="100" height="100" class="rounded-circle">
                         <h3 class="mt-2">خالد طه</h3> <span class="mt-1 clearfix">Java Architect</span>
                          <small class="mt-4 clearfix" >15 سنة</small>
                          <small class="mt-4">⚽هويتي كرة القدم و السباحة،🏊‍♂️</small>
