--- a/team.html
+++ b/team.html
@@ -107,9 +107,9 @@
             <div class="col-md-4">
                 <div class="card p-3 py-4 mt-5 mb-5">
                     <div class="text-center"> <img src="mernan.png" width="100" height="100"class="rounded-circle">
-                        <h3 class="mt-2">مرنان ماجد</h3> <span class="mt-1 clearfix">Android Developer</span> 
+                        <h3 class="mt-2">مرنان ماجد</h3> <span class="mt-1 clearfix">عضو في برلمان طلائع الجمهورية</span> 
                         <small class="mt-4 clearfix">16 سنة</small>
-                        <small class="mt-4">عضو في برلمان طلائع الجمهورية ومقرر عام الجلسة علي المستوي المحافظة؛ لاعبة جودو</small>
+                        <small class="mt-4">مقرر عام الجلسة علي المستوي المحافظة؛ لاعبة جودو</small>
                         <div class="social-buttons mt-5">
                             <a href="https://www.facebook.com/mernan.maged " target="blank">  <button class="neo-button"><i class="fa fa-facebook fa-1x"></i> </button></a> 
                             <a href="" target="blank">  <button class="neo-button"><i class="fa fa-linkedin fa-1x"></i></button></a>
@@ -122,7 +122,7 @@
             <div class="col-md-4">
                 <div class="card p-3 py-4 mt-5">
                     <div class="text-center"> <img src="ali.png"width="100" height="100" class="rounded-circle">
-                        <h3 class="mt-2">علي المتيم</h3> <span class="mt-1 clearfix">Graphics Designer</span>
+                        <h3 class="mt-2">علي المتيم</h3> <span class="mt-1 clearfix">طالب في الصف 2الثانوي</span>
                          <small class="mt-4 clearfix">15 سنة</small>
                          <small class="mt-4 clearfix">كرة القدم هوايتي ⚽</small>
                         <div class="social-buttons mt-5"> 
@@ -137,9 +137,9 @@
             <div class="col-md-4">
                 <div class="card p-3 py-4 mt-5">
                     <div class="text-center"> <img src="مصطفى.png" width="100" height="100" class="rounded-circle">
-                        <h3 class="mt-2">مصطفى عصام</h3> <span class="mt-1 clearfix">Java Architect</span> 
+                        <h3 class="mt-2">مصطفى عصام</h3> <span class="mt-1 clearfix">عضو مبادرة طور و غير </span> 
                         <small class="mt-4 clearfix">16 سنة</small>
-                        <small class="mt-4">طالب في الصف الثاني الثانوى في مدرسة اللواء الرسمية لغات,هويتي كورة القدم⚽، وأحب أن ممارسة السباحة🏊‍♂️</small>
+                        <small class="mt-4">متطوع بمؤسسة الهلال الاحمر الدولية, لاعب كرة قدم⚽, و احب السباحة</small>
                         <div class="social-buttons mt-5"> 
                             <a href="https://www.facebook.com/profile.php?id=100008381975661" target="blank"> <button class="neo-button"><i class="fa fa-facebook fa-1x"></i> </button></a>
                             <a href="" target="blank">  <button class="neo-button"><i class="fa fa-linkedin fa-1x"></i></button></a>
@@ -161,9 +161,9 @@
             <div class="col-md-5">
                 <div class="card p-3 py-4 mt-5">
                     <div class="text-center"> <img src="mohamed.png" width="100" height="100" class="rounded-circle">
-                        <h3 class="mt-2">محمد عبده</h3> <span class="mt-1 clearfix">Graphics Designer</span> 
+                        <h3 class="mt-2">محمد عبده</h3> <span class="mt-1 clearfix">عضو يبرلمان الطلائع</span> 
                         <small class="mt-4 clearfix">15 سنة</small>
-                        <small class="mt-4"> عضو يبرلمان الطلائع,ألعب البلاستيشن🕹️</small>
+                        <small class="mt-4"> احب لعب البلايستشن و البرمجة🕹️</small>
                         <div class="social-buttons mt-5"> 
                             <a href="https://www.facebook.com/profile.php?id=100054951039321" target="blank">  <button class="neo-button"><i class="fa fa-facebook fa-1x"></i> </button> </a>
                             <a href="" target="blank">  <button class="neo-button"><i class="fa fa-linkedin fa-1x"></i></button></a>
@@ -176,7 +176,7 @@
             <div class="col-md-5">
                 <div class="card p-3 py-4 mt-5">
                     <div class="text-center"> <img src="khaled.png" width="100" height="100" class="rounded-circle">
-                        <h3 class="mt-2">خالد طه</h3> <span class="mt-1 clearfix">Java Architect</span>
+                        <h3 class="mt-2">خالد طه</h3> <span class="mt-1 clearfix">طالب بالصف الثاني الاعدادي</span>
                          <small class="mt-4 clearfix" >15 سنة</small>
                          <small class="mt-4">⚽هويتي كرة القدم و السباحة،🏊‍♂️</small>
                         <div class="social-buttons mt-5"> 
