--- a/index.html
+++ b/index.html
@@ -202,21 +202,21 @@
              <img src="4.jpeg" alt="streetChild" width="100%" height="500">
              <div class="carousel-caption">
               <h3>مبادرة احنا عيلتك</h3>
-              <p>معا لمجتمع امن و حياة مشرقة لأطفال مصر </p>
+              <p>معاً لمجتمع آمن وحياة مشرقة لأطفال مصر .</p>
             </div>
            </div>
            <div class="carousel-item">
              <img src="2.jpg" alt="streetChild" width="100%" height="500">
              <div class="carousel-caption">
               <h3>قيم المبادرة</h3>
-              <p>نأوي - ننمي - نشارك</p>
+              <p>نأوى - ننمي - نشارك</p>
             </div>
            </div>
            <div class="carousel-item">
              <img src="3.jpg" alt="streetChild" width="100%" height="500">
              <div class="carousel-caption">
               <h3>قيم المبادرة</h3>
-              <p> نأوي الاطفال - ننمي مهارتهم - نشارك انجازتهم و ندمجمهم بالمجتمع</p>
+              <p> نأوى الأطفال - ننمي مهاراتهم - نشارك إنجازاتهم وندمجهم في المجتمع.</p>
             </div>
            </div> 
          </div>
@@ -232,23 +232,23 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-12" style="text-align: center;padding: 20px;">
-            <h2 > مبادرة احنا عيلتك لحماية الاطفال بلا مأوى</h2>
+            <h2 >  مبادرة أحنا عيلتك لحماية الأطفال بلا مأوى.</h2>
           </div>
             </div> 
           </div>
             <div class="col-md-12"  style="background-color: rgb(196, 11, 11); color: white; padding: 100px;font-size: 20px;text-shadow:0px 3px 10px rgb(0 0 0 / 0.4);">
               <h3> من نحن :</h3>
-               <p> نحن مجموعة من الشباب نقدم حلول لحل مشاكل المجتمع انشأنا هذه المبادرة</p>
-               <p> لانقاذ اطفال بلا مأوى واتاحة لهم الفرص و دمجهم فى  المجتمع واخفاء هذه الظاهرة</p>
+               <p> نحن مجموعة من الشباب نقدم حلول لحل مشاكل المجتمع أنشأنا هذه المبادرة</p>
+               <p> لإنقاذ أطفال بلا مأوى وإتاحة الفرص لهم ودمجهم فى المجتمع، وإخفاء هذه الظاهرة.</p>
            </div>
       </div>
        <div class="row row1 ">
              <div class="col-md-12" style="background-color: white;padding: 100px;font-size: 20px;text-shadow:0px 3px 5px rgb(0 0 0 / 0.4);">
-               <h3>اهداف المبادرة :</h3>
-               <p>- نشر الوعى عن ظاهرة اطفال بلا مأوى و تغير النظرة السلبية عنهم.</p>
-               <p>- تغير حياة الطفل للأفضل من شتى النواحى .</p>
-               <p>- ايواء الاطفال بلا مأوى و دمجهم بالمجتمع .</p>
-               <p>-  العمل علي ابراز قدرات هؤلاء الاطفال و تنميتها ليكونوا اشخاص اسوياء , و منتجين , ومفيدين للمجتمع.</p>
+               <h3>أهداف المبادرة :</h3>
+               <p>- نشر الوعى عن ظاهرة أطفال بلا مأوى وتغيير النظرة السلبية عنهم.</p>
+               <p>- تغيير حياة الطفل للأفضل في شتى مناحي الحياة.</p>
+               <p>- إيواء الأطفال بلا مأوى ودمجهم بالمجتمع .</p>
+               <p>-  العمل علي إبراز قدرات هؤلاء الأطفال وتنميتها ليكونوا أشخاص أسوياء، ومنتجين، ومفيدين للمجتمع.</p>
             </div>
        </div>
 
@@ -256,10 +256,10 @@
         <div class="col-md-12" style=" background-color: black; color: white;padding: 100px;font-size: 20px;text-shadow:0px 3px 10px rgb(255 255 255 / 0.4);">
           <h3>!كيف يمكن ان تساعد ؟</h3>
           <ul>
-            <li>اتطوع وشاركنا فى مساعدةاطفال بلا مأوى .</li>
-            <li>اتبرع لتغير حياة طفل للأحسن " معا لحياة أفضل " .</li>
-            <li>عمم فكرة مبادرة احنا عيلتك لمساعدة اكبر عدد من اطفال الشارع .</li>
-            <li>انشر التوعية فى المجتمع .</li>
+            <li>تطوع وشاركنا في مساعدة أطفال بلا مأوى.</li>
+            <li>تبرع لتغيير حياة طفل للأحسن "معاً لحياة أفضل".</li>
+            <li>شاركنا في نشر مبادرة "إحنا عيلتك" لمساعدة أكبر عدد من أطفال الشوارع.</li>
+            <li>انشر التوعية بقضية أطفال بلا مأوى في المجتمع</li>
           </ul>
        </div>
       </div> 
@@ -270,8 +270,8 @@
     </div>
     <!--awarness video-->
     <div class="container MyVideo" style="padding-top: 50px;">
-      <h2>تعرف علينا و علي المبادرة</h2>
-      <p>معا لمجتمع امن و حياة مشرفة لأطفال مصر</p>
+      <h2>تعرف علينا وعلى المبادرة/h2>
+      <p>معا لمجتمع آمن وحياة مشرقة لأطفال مصر.</p>
       <div class="embed-responsive embed-responsive-16by9">
        <iframe width="560" height="315" src="https://www.facebook.com/plugins/video.php?height=280&href=https%3A%2F%2Fwww.facebook.com%2F239379081327897%2Fvideos%2F610654817012151%2F&show_text=false&width=560&t=0" width="560" height="280" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
       </div>
@@ -290,8 +290,8 @@
           height: 100%;">
         </div>
         <div class="flip-card-back">
-          <h1>"معا لحياة أفضل"</h1> 
-          <p><h4>أتبرع لتحسين حياة طفل</h4></p> 
+          <h1>"معاً لحياة أفضل"</h1> 
+          <p><h4>تبرع لإنقاذ حياة طفل.</h4></p> 
          <br>
           <button type="button" class="btn" style="background-color: black; color: white;"><a href="donate.html"><h5>تبرع</h5></a></button>
         </div>
@@ -309,7 +309,7 @@
           
         </div>
         <div class="flip-card-back">
-          <h1>"معا لحياة أفضل"</h1> 
+          <h1>"معاً لحياة أفضل"</h1> 
           <p><h4>تطوع لمساعدتنا </h4></p> 
           <br>
           <button type="button" class="btn" style="background-color: black; color: white;"><a href="volunteer.html"><h5>تطوع</h5></a></button>
@@ -325,7 +325,7 @@
    <div class="container">
    <div class="row myHeadline">
     <div class="col-md-12" >
-      <h2> مبادرة احنا عيلتك لحماية الاطفال بلا مأوى</h2>
+      <h2> مبادرة إحنا عيلتك لحماية الأطفال بلا مأوى .</h2>
       <h4>برعاية</h4>
     </div>
   </div>
@@ -358,8 +358,8 @@
                         <img src="logo.jpeg" alt="footer_logo" class="img-fluid">
                     </a>
                     <p class="footer-info-text">
-                        مبادرة احنا عيلتك لمساعدة وايواء اطفال الشارع (اطفال بلا مأوى) وتقوم باعطائهم حقهم من الفرص لدمجهم فى المجتمع
-                        وتعليمهم وتوفير لهم احتياجتهم بحيث ان ينظروا اللى الحياة بأفضل وجه ولا يكون هناك اختلاف
+                        مبادرة "إحنا عيلتك" لمساعدة وإيواء أطفال الشارع ( أطفال بلا مأوى)، وتقوم المبادرة بإعطائهم حقهم من الفرص لدمجهم فى المجتمع،
+			    وتعليمهم وتوفير احتياجاتهم، حيث يستطيعون النظر إلى الحياة بشكل أفضل، ودون أي فرق عن أقرانهم.
                     </p>
                     <div class="footer-social-link">
                         <h3>تواصل معنا</h3>
@@ -404,7 +404,7 @@
                             </div>
                             <ul>
                                 <li>
-                                    <a href="index.html">الصفحةالرئيسية</a>
+                                    <a href="index.html">الصفحة الرئيسية</a>
                                 </li>
                                 <li>
                                     <a href="events.html">فعاليات</a>
